--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,7 @@ db.sqlite3
 # VS Code settings
 .vscode/
 
-# Django static files (optional if collected)
-static/
 
-# Other common ignores
+# Logs and system files
 *.log
 *.DS_Store
